# Todolist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  doker-compose.yaml  pyproject.toml
src/todolist/: settings.py
todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py
todolist/todolist/: settings.py  urls.py  wsgi.py
